# Transformer

./: .gitignore  README.md  config.py  dataset.py  pyproject.toml  train.py
Model/: __init__.py  transformer.py
Model/Decoder/: __init__.py  decoder.py  decoder_block.py
Model/Encoder/: __init__.py  encoder.py  encoder_block.py
Model/Utils/: __init__.py  feed_forward_block.py  input_embeddings.py  layer_normalization.py  multi_head_attention.py  positional_encoding.py  projection_layer.py  residual_connection.py
