[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "Transformer implemented from scratch for translation purposes"
authors = ["Rudr Pratap Singh <145427916+rzzdr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^2.2.2"
torch = "^2.6.0"
datasets = "^3.2.0"
tokenizers = "^0.21.0"
tqdm = "^4.67.1"
tensorboard = "^2.18.0"
huggingface-hub = "^0.28.1"
torchmetrics = "^1.6.1"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
# Launch Commands for Local Development
train = "python train.py"
